Ajustando nome do projeto e versão no package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "atividadesdevops03-emanuel_henrique_2314290017",
-  "version": "1.0.0",
+  "name": "atividadesdevo",
+  "version": "878",
   "description": "",
   "main": "index.js",
   "scripts": {
