--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "atividadesdevops03-emanuel_henrique_2314290017",
-  "version": "1.0.0",
+  "name": "atividadesdevops03",
+  "version": "9.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
